Remove 'Please select' from dropdown options and make period dropdown CSS consistent with other filters

--- a/backend/Admin_GMC/templates/admin/admin_dashboard.html
+++ b/backend/Admin_GMC/templates/admin/admin_dashboard.html
@@ -274,7 +274,7 @@
                     <h3>📈 Predictive Demand Graph</h3>
                     <div class="chart-controls">
                         <select class="branch-filter" id="predictiveDemandBranch" required>
-                            <option value="" selected>Please select a branch</option>
+                            <option value="" selected disabled>Please select a branch</option>
                             <option value="1">Marawoy</option>
                             <option value="2">Lipa</option>
                             <option value="3">Malvar</option>
@@ -283,13 +283,13 @@
                             <option value="6">Sta. Cruz</option>
                         </select>
                         <select class="branch-filter" id="predictiveDemandProduct" required style="display: none;">
-                            <option value="">Select Product</option>
+                            <option value="" selected disabled>Select Product</option>
                         </select>
                         <select class="branch-filter" id="predictiveDemandBatch" style="display: none;">
-                            <option value="">Please select a batch</option>
+                            <option value="" selected disabled>Please select a batch</option>
                         </select>
-                        <select class="chart-period" id="predictiveDemandPeriod">
-                            <option value="" selected>Please select a period</option>
+                        <select class="branch-filter" id="predictiveDemandPeriod">
+                            <option value="" selected disabled>Please select a period</option>
                             <option value="7">Next 7 days</option>
                             <option value="30">Next 30 days</option>
                             <option value="90">Next 90 days</option>
